src/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap");

*{
  color: var(--text-color);
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
}

:root{
  font-size: 18px;

  --shadow-color: rgba(0, 0, 0, .05);
  --shadow-height: .2rem;
  --shadow-spread: .5rem;

  /* color theme */
  --background-color: #17171C;
  --border-color: #27272F;
  --text-color: #FFF;
  --selection-color: rgba(255, 255, 255, .2);

  --highlight-default: #E9E9E9;
  --highlight-comment: #888;
  --highlight-number: #F93;
  --highlight-symbol: #3AF;
  --highlight-headers: #F55;
  --highlight-keyword: #A8F;
  --highlight-flag: #AC8;
}

:root[data-theme=high-contrast]{
  --background-color: #000;
  --border-color: #444;
  --selection-color: rgba(255, 255, 255, .3);

  --highlight-default: #FFF;
  --highlight-comment: #CCC;
}

:root[data-theme=one-dark-pro]{
  --background-color: #282C34;
  --border-color: #454C5A;

  --highlight-default: #ABB2Bf;
  --highlight-comment: #5C6370;
  --highlight-number: #D19A66;
  --highlight-symbol: #61AEEE;
  --highlight-headers: #E06C75;
  --highlight-keyword: #C678DD;
  --highlight-flag: #98C379;
}

:root[data-theme=one-half-light]{
  --background-color: #FAFAFA;
  --border-color: #FFF;
  --text-color: #000;
  --selection-color: rgba(0, 0, 0, .2);

  --highlight-default: #383A42;
  --highlight-comment: #A0A1A7;
  --highlight-number: #C18401;
  --highlight-symbol: #0184BC;
  --highlight-headers: #E45649;
  --highlight-keyword: #A626A4;
  --highlight-flag: #50A14F;
}

:root[data-theme=palenight]{
  --background-color: #292D3E;
  --border-color: #424864;
  --selection-color: #7580B850;

  --highlight-default: #BFC7D5;
  --highlight-comment: #697098;
  --highlight-number: #F78C6C;
  --highlight-symbol: #82AAFF;
  --highlight-headers: #FFCB6B;
  --highlight-keyword: #C792EA;
  --highlight-flag: #C3E88D;
}

:root[data-theme=one-monokai]{
  --background-color: #282C34;
  --border-color: #454C5A;

  --highlight-default: #F8FAFD;
  --highlight-comment: #676F7D;
  --highlight-number: #C678DD;
  --highlight-symbol: #56B6C2;
  --highlight-headers: #E06C75;
  --highlight-keyword: #98C379;
  --highlight-flag: #E5C07B;
}

body{
  height: 100vh;
  margin: 0;
  background-color: var(--background-color);
  font-family: Montserrat, sans-serif;
  display: flex;
  flex-direction: column;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1{
  margin: 0;
}

input[type=file]{
  display: none;
}

input[type=checkbox]{
  cursor: pointer;
}

header{
  padding: 0 1rem;
  background-color: var(--border-color);
  display: flex;
  flex-direction: row;
  box-shadow: 0 var(--shadow-height) var(--shadow-spread) var(--shadow-color);
  z-index: 9;
}

header > span{
  margin-right: 1rem;
  font-weight: 600;
  display: flex;
  align-items: center;
}

nav{
  display: flex;
}

nav input[type=checkbox]{
  margin-right: .5rem;
}

nav a{
  text-decoration: none;
  flex: 1;
}

nav > div{
  font-size: .9rem;
  user-select: none;
}

nav > div:hover, nav .menu > span:hover{
  background-color: var(--selection-color);
}

nav > .parent > span{
  padding: .2rem .75rem;
  display: block;
}

nav .parent{
  position: relative;
}

nav .parent:hover > .menu{
  display: flex;
}

nav .menu{
  width: 15rem;
  padding: .5rem 0;
  background-color: var(--background-color);
  position: absolute;
  display: none;
  flex-direction: column;
  border: 1px solid var(--border-color);
  box-shadow: 0 var(--shadow-height) var(--shadow-spread) var(--shadow-color);
  cursor: default;
  z-index: 9;
}

nav .menu.submenu{
  margin-left: -2px;
  top: 0;
  left: 15rem;
}

nav > .menu:not(.submenu){
  border-top: none;
}

nav .menu > span{
  padding: .3rem 1rem;
  font-size: .85rem;
  display: flex;
  align-items: center;
  cursor: pointer;
}

nav .shortcut{
  padding-left: 1rem;
  font-size: .8em;
  text-align: right;
  flex: 1;
  opacity: .75;
}

footer{
  padding: .25rem .5rem;
  background-color: var(--border-color);
  font-size: .7rem;
  display: flex;
  box-shadow: 0 calc(var(--shadow-height) * -1) var(--shadow-spread) var(--shadow-color);
  z-index: 1;
}

footer > span:not(:last-child){
  margin-right: 1rem;
}

main{
  flex: 1;
  display: flex;
  overflow: auto;
}

main > *:not(.resizer):not(.line-numbers){
  flex: 1;
}

header label:not(:last-child){
  margin-right: 1rem;
}

label{
  font-size: .9rem;
  font-weight: 500;
  cursor: pointer;
  user-select: none;
}

label[for=bzw-file]{
  padding: .2rem .5rem;
  background-color: #07F;
  color: #FFF;
}

label[for=bzw-file]:hover{
  background-color: #28F;
}

select{
  padding: .2rem;
  background-color: var(--background-color);
  font-family: Montserrat, sans-serif;
  font-size: .8rem;
  font-weight: 500;
  border: none;
  border-radius: 0;
  outline: none;
  cursor: pointer;
}

textarea{
  --scrollbar-size: .5rem;

  padding-right: 2rem;
  background: none;
  color: transparent;
  caret-color: var(--highlight-default);
  resize: none;
  border: none;
  border-radius: 0;
  outline: none;
  white-space: nowrap;
  z-index: 1;
}

textarea::selection{
  background-color: var(--selection-color);
}

textarea::-webkit-scrollbar{
  width: var(--scrollbar-size);
  height: var(--scrollbar-size);
  border-left: 1px solid var(--border-color);
}

textarea::-webkit-scrollbar-thumb{
  background: var(--highlight-default);
  border-radius: var(--scrollbar-size);
}

textarea::-webkit-scrollbar-thumb:hover{
  background: var(--text-color);
}

textarea.show{
  color: var(--highlight-default);
}

.line-numbers, .editor > *{
  padding: .2rem .5rem;
  font-size: .8rem;
  font-family: "Source Code Pro", monospace;
  line-height: 1.1em;
}

.beta{
  margin-left: .5rem;
  padding: .1rem .5rem;
  background-color: #F005;
  font-size: .8rem;
  font-weight: 500;
  border: 1px solid #F00;
  border-radius: 1rem;
}

.line-numbers{
  margin: 0;
  color: #888;
  text-align: right;
  display: flex;
  flex-direction: column;
  border-right: 1px solid var(--border-color);
  overflow: hidden;
  user-select: none;
}

.editor{
  display: flex;
  position: relative;
  border-right: 1px solid var(--border-color);
}

.editor > *{
  flex: 1;
  overflow: auto;
}

.resizer{
  --width: .5rem;

  width: var(--width);
  margin-left: calc(var(--width) * -.3);
  margin-right: calc(var(--width) * -.7);
  cursor: ew-resize;
  z-index: 2;
}

.highlight{
  margin: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  pointer-events: none;
  overflow: hidden;
}

/* make empty lines take up vertical space */
.highlight > div:empty::after{
  content: ".";
  visibility: hidden;
}

.highlight div{
  color: var(--highlight-default);
}

.highlight .comment{
  color: var(--highlight-comment);
}

.highlight .number{
  color: var(--highlight-number);
}

.highlight .symbol{
  color: var(--highlight-symbol);
}

.highlight .header{
  color: var(--highlight-headers);
}

.highlight .keyword{
  color: var(--highlight-keyword);
}

.highlight .flag{
  color: var(--highlight-flag);
}

@media only screen and (max-width: 768px){
  main{
    flex-direction: column;
  }

  .line-numbers{
    display: none
  }
}

